--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
+    "@supabase/ssr": "^0.1.0",
+    "@tailwindcss/postcss": "^4.1.14",
     "autoprefixer": "^10.4.21",
     "next": "^14.2.33",
     "postcss": "^8.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "replicate": "^0.25.2",
-    "tailwindcss": "^3.4.13"
+    "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
     "@types/node": "^20",
