--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.3",
     "@supabase/ssr": "^0.1.0",
+    "@supabase/supabase-js": "^2.39.3",
     "autoprefixer": "^10.4.21",
     "next": "^14.2.33",
     "postcss": "^8.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "replicate": "^0.25.2",
+    "stripe": "^19.1.0",
     "tailwindcss": "^3.4.18"
   },
   "devDependencies": {
